Fix: messages dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,12 @@ body.dark .orders-table tr:hover {
   cursor: pointer;
   background-color: #333; 
 }
-
+body.dark .message-sender { 
+  color: white;
+}
+body.dark .unread { 
+  background-color: green;
+}
 @media screen and (max-width: 1300px) {
   .content {
     margin-left: 0;
